  50. New Skills: Naval Tactics, Salvaging, Sea Maneuvers, Crows Nest, Hire Crewmember
  51. New Skills: Morse Code, Stowaway
  52. Can now LIST AREATYPES
  53. Individual diseases can now be disabled from the DISABLE= entry in the INI file.
  54. New Commoner class in beta: Sailor  
  55. Patroller now works with Sailing Ships.
# Build 5.9.3 Released 05/08/2016
   1. Follower behavior now has a few more options.
   2. STAT [MOBNAME] will now give full editor stats also, and 
   3. STAT [ITEMNAME/AREANAME/EXITNAME/ROOMNAME] now gives editor stats without editing
   4. New Locales: WaterSurfaceColumn and UnderWaterColumnGrid, and Salt water varieties.
   5. LIST TIMEZONES can now show all your areas grouped by common calendar.
   6. Smelting recipes are now editable from MG and CL.
   7. Prop_OpenPassword can now have a language qualifier
   8. LIST AREA SHOPS will now show local shop inventories with prices
   9. Archon QUESTS [QUEST NAME] and LIST QUESTWINNERS can now show all winners of quests.
  10. New CHANNEL flag: NOLANGUAGE, to turn off foreign languages when using the channel.
  11. LIST QUESTNAMES can show a map between quest names (ids) and display names.
  12. LIST ABILITYDOMAINS will show a list of, well, ability domains
  13. ID on private property will now show size and features, as will VIEW of titles on shopkeepers.
  14. Scripting trigger matches P syntax now truly is Precise (noteable bug fix).
  15. Conquerable will now transfer private property to conqueror, see new OWNERSHIP flag.
  16. Prop_Lot*ForSale and Prop_RoomPlus now support grid-connecting the walls of rooms for looping.
  17. New Scriptable commands: MPOLOADSHOP and MPMLOADSHOP, and funcs: SHOPHAS, SHOPITEM, NUMITEMSSHOP
  18. New Achievements trigger: CLASSLEVELSGAINED -- several more achievements that use it also.
  19. MudChat now supports talking spontaneously on a schedule, and responses may contain scriptable funcs.