@@ -734,11 +734,14 @@ See also the BRIEF command.
 AUTO=CONFIG
 CONFIG=\
 Command : CONFIG\n\r\
-Usage   : CONFIG\n\r\
+Usage   : CONFIG ([FLAG NAME]/PAGEBREAK [VAL]/LINEWRAP [VAL)\n\r\
 Example : config\n\r\
+Example : config autodraw\n\r\
+Example : config pagebreak disabled\n\r\
 Short(s): AUTO\n\r\
 Display all of a players configuration flags.  The flags may \
-be changed by entering the command words shown (autogold, etc..)
+be changed by entering the command words shown (autogold, etc..) \
+as commands, or as arguments to config.
 
 CONSIDER=\
 Command : CONSIDER\n\r\
